* Issue #102 Cleaned Up Eyes Assets

--- a/sources/source_index.html
+++ b/sources/source_index.html
@@ -466,29 +466,13 @@
 								div_sheet_eyes_adult%face=face_closing
 								div_sheet_eyes_adult%face=face_look_r
 								div_sheet_eyes_adult%face=face_look_l
-								div_sheet_eyes_adult%face=face_eyeroll
+								div_sheet_eyes_adult%face=face_sad2
 								div_sheet_eyes_adult%face=face_shock
-								div_sheet_eyes_adult%face=face_anger
-								div_sheet_eyes_adult%face=face_sad
 								div_sheet_eyes_adult%face=face_shame
 							</ul>
 						</li>
 
-						<!-- Child -->
-						<li data-required="male,female,muscular,pregnant,teen">
-							<span class="condensed">Child Human Eyes</span>
-							<ul>
-								div_sheet_eyes_child%face=face_none
-								div_sheet_eyes_child%face=face_closing
-								div_sheet_eyes_child%face=face_look_r
-								div_sheet_eyes_child%face=face_look_l
-								div_sheet_eyes_child%face=face_eyeroll
-								div_sheet_eyes_child%face=face_shock
-								div_sheet_eyes_child%face=face_anger
-								div_sheet_eyes_child%face=face_sad
-								div_sheet_eyes_child%face=face_shame
-							</ul>
-						</li>
+						div_sheet_eyes_child
 					</ul>
 				</li>
 
