* Issue #67 Reorganized Feet Asset Lists

--- a/sources/source_index.html
+++ b/sources/source_index.html
@@ -1248,78 +1248,88 @@
 
 
 			</ul>
+
+			<!-- LEGS -->
 			<h3>Legs</h3>
 			<ul>
-				<!-- LEGS -->
-
-				<!-- Legs -->
+				div_sheet_legs_armour
+				<!-- Pants -->
 				<li>
-					<span class="condensed">Legs</span>
+					<span class="condensed">Pants</span>
 					<ul>
-						div_sheet_legs_armour
-						<!-- Pants -->
-						<li>
-							<span class="condensed">Pants</span>
-							<ul>
-								div_sheet_legs_widepants
-								div_sheet_legs_pants
-								div_sheet_legs_pants2
-								div_sheet_legs_cuffed
-								div_sheet_legs_pantaloons
-								div_sheet_legs_formal
-								div_sheet_legs_formal_striped
-								div_sheet_legs_fur
-								div_sheet_legs_pregnantpants
-								div_sheet_legs_childpants
-							</ul>
-						</li>
-
-						<!-- Leggings -->
-						<li data-required="male,female,teen">
-							<span class="condensed">Leggings</span>
-							<ul>
-								div_sheet_legs_leggings
-								div_sheet_legs_leggings2
-								div_sheet_legs_hose
-							</ul>
-						</li>
-
-						<!-- Shorts -->
-						<li data-required="male,female,teen">
-							<span class="condensed">Shorts</span>
-							<ul>
-								div_sheet_legs_shorts
-								div_sheet_legs_shorts_short
-							</ul>
-						</li>
-
-						<!-- Skirts -->
-						<li>
-							<span class="condensed">Skirts</span>
-							<ul>
-								div_sheet_legs_childskirts
-								div_sheet_legs_skirts_plain
-								div_sheet_legs_skirts_slit
-								div_sheet_legs_skirts_legion
-								div_sheet_legs_skirt_straight
-								div_sheet_legs_skirt_belle
-								div_sheet_legs_skirt_overskirt
-							</ul>
-						</li>
+						div_sheet_legs_widepants
+						div_sheet_legs_pants
+						div_sheet_legs_pants2
+						div_sheet_legs_cuffed
+						div_sheet_legs_pantaloons
+						div_sheet_legs_formal
+						div_sheet_legs_formal_striped
+						div_sheet_legs_fur
+						div_sheet_legs_pregnantpants
+						div_sheet_legs_childpants
 					</ul>
 				</li>
 
-				<!-- FEET -->
+				<!-- Leggings -->
+				<li data-required="male,female,teen">
+					<span class="condensed">Leggings</span>
+					<ul>
+						div_sheet_legs_leggings
+						div_sheet_legs_leggings2
+						div_sheet_legs_hose
+					</ul>
+				</li>
+
+				<!-- Shorts -->
+				<li data-required="male,female,teen">
+					<span class="condensed">Shorts</span>
+					<ul>
+						div_sheet_legs_shorts
+						div_sheet_legs_shorts_short
+					</ul>
+				</li>
+
+				<!-- Skirts -->
+				<li>
+					<span class="condensed">Skirts</span>
+					<ul>
+						div_sheet_legs_childskirts
+						div_sheet_legs_skirts_plain
+						div_sheet_legs_skirts_slit
+						div_sheet_legs_skirts_legion
+						div_sheet_legs_skirt_straight
+						div_sheet_legs_skirt_belle
+						div_sheet_legs_skirt_overskirt
+					</ul>
+				</li>
+
+			</ul>
+
+			<!-- FEET -->
+			<h3>Feet</h3>
+			<ul>
+				div_sheet_feet_armour
+
+				<!-- Shoes -->
+				<li data-required="male,female,muscular,pregnant,teen">
+					<span class="condensed">Shoes</span>
+					<ul>
+						div_sheet_feet_shoes_basic
+						div_sheet_feet_shoes_revised
+						div_sheet_feet_shoes_sara
+						div_sheet_feet_shoes_ghillies
+					</ul>
+				</li>
 
 				<!-- Boots -->
 				<li data-required="male,female,muscular,pregnant,teen">
 					<span class="condensed">Boots</span>
 					<ul>
-						div_sheet_feet_boots
+						div_sheet_feet_boots_basic
+						div_sheet_feet_boots_revised
 						div_sheet_feet_boots_fold
 						div_sheet_feet_boots_rim
 						div_sheet_feet_boots_plate
-						div_sheet_feet_boots2
 					</ul>
 				</li>
 
@@ -1333,21 +1343,9 @@
 					</ul>
 				</li>
 
-				<!-- Shoes -->
-				<li data-required="male,female,muscular,pregnant,teen">
-					<span class="condensed">Shoes</span>
-					<ul>
-						div_sheet_feet_armour
-						div_sheet_feet_slippers
-						div_sheet_feet_shoes
-						div_sheet_feet_shoes2
-						div_sheet_feet_hoofs
-						div_sheet_feet_sandals
-						div_sheet_feet_ghillies
-						div_sheet_feet_sara
-					</ul>
-				</li>
-
+				div_sheet_feet_slippers
+				div_sheet_feet_sandals
+				div_sheet_feet_hoofs
 			</ul>
 
 			<!-- TOOLS -->
