* Fixed Paths for XLong, Added XLong Wavy and High Bun

--- a/sources/source_index.html
+++ b/sources/source_index.html
@@ -540,6 +540,11 @@
 									div_sheet_hairext_topknot_long
 								</ul></li>
 							</ul>
+							<ul>
+								<li><span class="condensed">Knot / Ties</span><ul>
+									div_sheet_hairext_high_bun
+								</ul></li>
+							</ul>
 						</li>
 						<li><span class="condensed">afro</span><ul>
 							div_sheet_hair_afro
@@ -644,6 +649,7 @@
 							div_sheet_hair_sara
 							div_sheet_hair_long_band
 							div_sheet_hair_xlong
+							div_sheet_hair_xlong_wavy
 						</ul></li>
 					</ul>
 				</li>
