* Removed BG on Long Bangs in Sheets, Added Long Straight Bangs

--- a/sources/source_index.html
+++ b/sources/source_index.html
@@ -532,6 +532,8 @@
 									div_sheet_hairext_xlong_braidr
 									div_sheet_hairext_xlong_bangl
 									div_sheet_hairext_xlong_bangr
+									div_sheet_hairext_long_straightl
+									div_sheet_hairext_long_straightr
 									div_sheet_hairext_long_wavyl
 									div_sheet_hairext_long_wavyr
 									div_sheet_hairext_xlong_wavyl
