* Issue jrconway3#82 Added FG/BG to Wavy Hair, All Frames, Split Child Off Again From Wavy

--- a/sources/source_index.html
+++ b/sources/source_index.html
@@ -652,6 +652,7 @@
 							div_sheet_hair_long_messy2
 							div_sheet_hair_curtains_long
 							div_sheet_hair_wavy
+							div_sheet_hair_wavy_child
 							div_sheet_hair_long_center_part
 							div_sheet_hair_long_straight
 						</ul></li>
