add tests for AnimationFilters

--- a/tests_run.html
+++ b/tests_run.html
@@ -15,7 +15,8 @@
     <script type="importmap">
       {
         "imports": {
-          "chai": "https://cdn.jsdelivr.net/npm/chai@6.2.2+esm"
+          "chai": "https://cdn.jsdelivr.net/npm/chai@6.2.2+esm",
+          "sinon": "https://cdn.jsdelivr.net/npm/sinon@21.0.1/+esm"
         }
       }
     </script>
